Resolve alignment issue for all sections

--- a/src/styles/utilities.scss
+++ b/src/styles/utilities.scss
@@ -180,6 +180,10 @@
 .pt-8 {
   padding-top: 2rem;
 }
+.px-0 {
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+}
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -220,9 +224,21 @@
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
 .py-12 {
   padding-top: 3rem;
   padding-bottom: 3rem;
+}
+.py-16 {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+.py-20 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
 }
 .py-32 {
   padding-top: 8rem;
@@ -256,6 +272,9 @@
 }
 .mb-20 {
   margin-bottom: 5rem;
+}
+.mt-0 {
+  margin-top: 0;
 }
 .mt-7 {
   margin-top: 1.75rem;
